Fix hor scroll caused by overflow on mobile

--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ html {
     font-size: 62.5%;
     scroll-behavior: smooth;
     text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased
+    -webkit-font-smoothing: antialiased;
+    overflow-x: hidden
 }
 
 :root {
@@ -1670,7 +1671,7 @@ footer {
     .hamburger {
         position: fixed;
         top: 0;
-        width: 100vw;
+        width: 100%;
         height: 115px;
         display: flex;
         align-items: flex-end;
